[project]
name = "codegen"
version = "1.0.0"
description = "Scripts for generating Device Path Nodes related code for EFI Boot Editor"

requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
lint.select = [
    "B",
    "C",
    "E",
    "F",
    "I",
    "W",
]

line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
strict = true
check_untyped_defs = true
disallow_any_generics = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

plugins = []
