[project]
name = "qt-updater"
version = "1.0.0"
description = "Script for updating EFI Boot Editor CI with latest Qt versions"

requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "ruamel-yaml>=0.18.14",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
    "types-requests>=2.32.4.20250611",
]

[tool.ruff]
lint.select = [
    "B",
    "C",
    "E",
    "F",
    "I",
    "W",
]

line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
strict = true
check_untyped_defs = true
disallow_any_generics = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

plugins = []
